Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9477

umpnpmgr's InstallDevice returns failure even if the device was successfully installed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.0
    • Services
    • None

    Description

      The log shows something like this for every device instance:

      (base/services/umpnpmgr/umpnpmgr.c:3057) Installing: ACPI\PNP0C0F\0
      (ntoskrnl/io/pnpmgr/plugplay.c:709) A new driver will be loaded for 'ACPI\PNP0C0F\0' (no FDO above)
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 130500A8
      (base/services/umpnpmgr/umpnpmgr.c:3168) InstallDevice failed for DeviceInstance 'ACPI\PNP0C0F\0'

      The "a new driver will be loaded" message clearly indicates that device installation was successful.

      However InstallDevice always fails – because it checks the process exit code from rundll32.exe (which always returns 0).

      Attachments

        Activity

          People

            ThFabba ThFabba
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: