[UMPNPMGR][NEWDEV] - Actually create the "InstallEvent" as an event and use it to communicate success from newdev back to umpnpmgr. This works better than checking the process exit code from rundll32 (which always returns 0). CORE-9477 #resolve

svn path=/trunk/; revision=67025